<resources>
    <string name="app_name">Project2-GoogleMaps</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="name">Project 2 by Ambreen Haleem</string>
    <string name="id">Student Id : 1114113</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_lon_snippet">Lat:%1$.5f, Long:$2$.5</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="display">Display</string>
    <string name="latitude">Latitude :</string>
    <string name="longitude">Longitude :</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>